[package]
name = "os_funtimes"
version = "0.1.0"
authors = ["Theodore DeRego <tderego94@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[workspace]

[dependencies]
bitflags = "0.7.0"
rlibc = "0.1.4"
spin = "0.3.4"
multiboot2 = { git = "https://github.com/phil-opp/multiboot2-elf64" }
x86 = { version = "0.7.1", default-features = false }
bump_allocator = { path = "libs/bump_allocator" }
hole_list_allocator = { path = "libs/hole_list_allocator" }
