[package]
authors = ["Theodore DeRego <tderego94@gmail.com>"]
name = "os_funtimes"
version = "0.1.0"

[dependencies]
bit_field = "0.7.0"
bitflags = "0.7.0"
#multiboot2 = "0.1.0"
multiboot2 = { git = "https://github.com/tedsta/multiboot2-elf64" }
once = "0.3.2"
rlibc = "1.0"
spin = "0.4.5"
volatile = "0.1.0"
x86_64 = "0.1.0"

[dependencies.bump_allocator]
path = "libs/bump_allocator"

[dependencies.hole_list_allocator]
path = "libs/hole_list_allocator"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "0.2.1"

[lib]
crate-type = ["staticlib"]

[profile]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
